# smelt-sql

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
crates/smelt-backend-duckdb/: Cargo.toml
crates/smelt-backend-duckdb/src/: lib.rs
crates/smelt-cli/: Cargo.toml
crates/smelt-cli/src/: discovery.rs  executor.rs  lib.rs  main.rs
crates/smelt-db/src/: lib.rs
crates/smelt-parser/src/: parser.rs
crates/sqt-db/: Cargo.toml
crates/sqt-db/src/: lib.rs  schema.rs
crates/sqt-examples/: Cargo.toml
crates/sqt-examples/examples/: example1_naive.rs  example1_optimized.rs
crates/sqt-lsp/: Cargo.toml
crates/sqt-lsp/src/: main.rs
crates/sqt-parser/src/: ast.rs  lexer.rs  parser.rs  syntax_kind.rs
docs/: CLAUDE.md  DESIGN.md  ROADMAP.md  example1_insights.md  lsp_quickstart.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: sqt.tmLanguage.json
test-workspace/: README.md  smelt.yml
test-workspace/models/: broken_model.sql  raw_events.sql  user_sessions.sql  user_stats.sql
